# seatbelt

./: .gitignore  .gitmodules  CDC_TOOLS.md  CLAUDE.md  LICENSE  README.md
benchmarks/: README.md  bench_source_scan.sh  create_datasets.sh  dataset_sample.csv
change-validation-core/: README.md  validation_logic.py  validation_logic_tests.json
demo-live/: Makefile  README.md  docker-compose.yml
demo-live/.seatbelt/: check.py
demo-live/mysql-init/: 01-create-demo-data.sql  02-create-user.sql
demo-live/scripts/: _common.sh  insert_row_with_error.sh  subset_of_columns.sh  (+2 more)
demo-tui/: .gitignore  01_simulator.py  02_data_generation.py  README.md  requirements.txt  run_tests.py  setup.py  simulator_oop.py  tui.py  validation_logic.py
docs/: 01-concepts.md  02-architecture.md  03-setup-sling.md  04-setup-peerdb.md
duckdb-seatbelt-extension/: CMakeLists.txt  Makefile  extension_config.cmake
duckdb-seatbelt-extension/src/: seatbelt_duckdb_extension.cpp
duckdb-seatbelt-extension/src/include/: seatbelt_duckdb_extension.hpp
duckdb-seatbelt-extension/test/sql/: validation_logic.test  verify_row_integrity_types.test
exp-duckdb-extension/: .gitignore  generate_data.py  main.py
exp-peerdb-duckdb/: requirements.txt  validation.py
pyseatbelt/: .gitignore  README.md  run_tests_with_logs.py
pyseatbelt-duckdb/: __main__.py  setup.py
reference/: validation_logic.py  validation_logic_tests.json
seatbelt/: .gitignore  Makefile  README.md  config.yaml  go.mod  go.sum  inspect_diff.py
seatbelt-duckdb/: CMakeLists.txt  README.md
wasm-mappers/: ABI.md  README.md
(+197 files in other folders)
